fix: wrong colors and padding states

--- a/src/components/List/ListItem/Variants/SingleSelectItem/SingleSelectItem.scss
+++ b/src/components/List/ListItem/Variants/SingleSelectItem/SingleSelectItem.scss
@@ -4,19 +4,34 @@
     align-items: center;
     justify-content: space-between;
     text-decoration: none;
-    padding: 10px var(--space-150);
+    padding: var(--space-150);
     outline: none;
+
+    &--disabled.SingleSelectItem--isSelected.SingleSelectItem--isHighlighted {
+        &:hover {
+            padding: var(--space-150);
+        }
+    }
+
+    &--disabled.SingleSelectItem--isHighlighted:hover {
+        padding: var(--space-150);
+    }
 
     &:focus-visible,
     &--isHighlighted {
         border: var(--border-width-thick) solid var(--color-info-20);
-        padding: calc(10px - var(--border-width-thick))
-            calc(var(--space-150) - var(--border-width-thick));
+        padding: calc(var(--space-150) - var(--border-width-thick));
+    }
+
+    &:not(.SingleSelectItem--disabled).SingleSelectItem--isHighlighted {
+        &:hover {
+            padding: var(--space-150);
+        }
     }
 
     &:hover {
         background-color: var(--color-background-neutral-subtlest-hover);
-        padding: 10px var(--space-150);
+        padding: var(--space-150);
     }
 
     &:active {
@@ -34,6 +49,7 @@
         color: var(--color-text-disabled);
         border: none;
         cursor: not-allowed;
+        padding: var(--space-150);
     }
 
     &--isSelected.SingleSelectItem:hover {
